[package]
name = "glslopt-crasher"
version = "0.1.0"
authors = ["Jamie Nicol <jnicol@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build-parallel = "0.1.1"
glslopt = { path = "/home/jamie/src/glslopt-rs" }
webrender_build = { path = "/home/jamie/src/gecko/gfx/wr/webrender_build" }

[profile.dev]
opt-level = 2